trunk/Archive2/1c/b86afdf3512972/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include
   ^
main.cpp: In function 'principal':
main.cpp:3:5: error: type of 'vazio' defaults to 'int'
 int principal ( vazio ) 
     ^
main.cpp:5:5: error: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf ( "Strings: \ n " ) ; 
     ^
main.cpp:5:5: warning: incompatible implicit declaration of built-in function 'printf' [enabled by default]
main.cpp:5:14: error: unknown escape sequence: '\040'
     printf ( "Strings: \ n " ) ; 
              ^
main.cpp:6:5: error: ISO C forbids nested functions [-Wpedantic]
     const  de char * s =  "Olá" ; 
     ^
main.cpp:6:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char'
     const  de char * s =  "Olá" ; 
               ^
main.cpp:7:14: error: unknown escape sequence: '\040'
     printf ( " \ t ..% 10s \ n \ t ..%-10s \ n \ t % *. . s \ n " , s, s, 10 , s ) ;
              ^
main.cpp:7:14: error: unknown escape sequence: '\040'
main.cpp:7:14: error: unknown escape sequence: '\040'
main.cpp:7:14: error: unknown escape sequence: '\040'
main.cpp:7:14: error: unknown escape sequence: '\040'
main.cpp:7:14: error: unknown escape sequence: '\040'
main.cpp:7:5: warning: ' ' flag used with '%s' gnu_printf format [-Wformat=]
     printf ( " \ t ..% 10s \ n \ t ..%-10s \ n \ t % *. . s \ n " , s, s, 10 , s ) ;
     ^
main.cpp:7:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
main.cpp:7:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:9:14: error: unknown escape sequence: '\040'
     printf ( "Personagens: \ t % c%% \ n " , 65 ) ;
              ^
main.cpp:9:14: error: unknown escape sequence: '\040'
main.cpp:9:5: warning: ' ' flag used with '%c' gnu_printf format [-Wformat=]
     printf ( "Personagens: \ t % c%% \ n " , 65 ) ;
     ^
main.cpp:11:14: error: unknown escape sequence: '\040'
     printf ( "inteiros \ n " ) ; 
              ^
main.cpp:12:14: error: unknown escape sequence: '\040'
     printf ( "Decimal: \ t % i 0,6% d% i% i% i 0,0% + i% u \ n " , 1 , 2 , 3 , 0 , 0 , 4 , - 1 ) ; 
              ^
main.cpp:12:14: error: unknown escape sequence: '\040'
main.cpp:12:5: warning: repeated ' ' flag in format [-Wformat=]
     printf ( "Decimal: \ t % i 0,6% d% i% i% i 0,0% + i% u \ n " , 1 , 2 , 3 , 0 , 0 , 4 , - 1 ) ; 
     ^
main.cpp:12:5: warning: ' ' flag ignored with '+' flag in gnu_printf format [-Wformat=]
main.cpp:12:5: warning: ' ' flag used with '%u' gnu_printf format [-Wformat=]
main.cpp:13:14: error: unknown escape sequence: '\040'
     printf ( "Hexadecimal: \ t % x% x% X% # x \ n " , 5 , 10 , 10 , 6 ) ; 
              ^
main.cpp:13:14: error: unknown escape sequence: '\040'
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
     printf ( "Hexadecimal: \ t % x% x% X% # x \ n " , 5 , 10 , 10 , 6 ) ; 
     ^
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
main.cpp:13:5: warning: ' ' flag used with '%X' gnu_printf format [-Wformat=]
main.cpp:13:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
main.cpp:14:14: error: unknown escape sequence: '\040'
     printf ( "Octal: \ t % o% # o% # o \ n " , 10 , 10 , 4 ) ;
              ^
main.cpp:14:14: error: unknown escape sequence: '\040'
main.cpp:14:5: warning: ' ' flag used with '%o' gnu_printf format [-Wformat=]
     printf ( "Octal: \ t % o% # o% # o \ n " , 10 , 10 , 4 ) ;
     ^
main.cpp:14:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:14:5: warning: ' ' flag used with '%o' gnu_printf format [-Wformat=]
main.cpp:14:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:14:5: warning: ' ' flag used with '%o' gnu_printf format [-Wformat=]
main.cpp:16:14: error: unknown escape sequence: '\040'
     printf ( "ponto flutuante \ n " ) ; 
              ^
main.cpp:17:14: error: unknown escape sequence: '\040'
     printf ( "Arredondando: \ t % f% .0 f% .32 f \ n " , 1.5 , 1.5 , 1.3 ) ; 
              ^
main.cpp:17:14: error: unknown escape sequence: '\040'
main.cpp:17:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
     printf ( "Arredondando: \ t % f% .0 f% .32 f \ n " , 1.5 , 1.5 , 1.3 ) ; 
     ^
main.cpp:17:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
main.cpp:17:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:18:14: error: unknown escape sequence: '\040'
     printf ( "Preenchimento: \ t % 05.2f% .2 f% 5.2f \ n " , 1.5 , 1.5 , 1.5 ) ; 
              ^
main.cpp:18:14: error: unknown escape sequence: '\040'
main.cpp:18:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
     printf ( "Preenchimento: \ t % 05.2f% .2 f% 5.2f \ n " , 1.5 , 1.5 , 1.5 ) ; 
     ^
main.cpp:18:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:19:14: error: unknown escape sequence: '\040'
     printf ( "científico: \ t % E% e \ n " , 1.5 , 1.5 ) ; 
              ^
main.cpp:19:14: error: unknown escape sequence: '\040'
main.cpp:20:14: error: unknown escape sequence: '\040'
     printf ( "Hexadecimal: \ t % a% A \ n " , 1.5 , 1,5 ) ; 
              ^
main.cpp:20:14: error: unknown escape sequence: '\040'
main.cpp:20:5: warning: format '%A' expects argument of type 'double', but argument 3 has type 'int' [-Wformat=]
     printf ( "Hexadecimal: \ t % a% A \ n " , 1.5 , 1,5 ) ; 
     ^
main.cpp:20:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:3:5: warning: unused parameter 'vazio' [-Wunused-parameter]
 int principal ( vazio ) 
     ^
main.cpp:21:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
